# wecom-sdk

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: test_access_token.py  test_all_type_of_message.py  test_departments.py  test_message.py  test_mixin_sdk.py  test_user.py
wecom_sdk/: __init__.py
wecom_sdk/etc/: constants.py
wecom_sdk/exceptions/: general.py
wecom_sdk/modules/: base.py  department.py  message.py  mixin.py  users.py
wecom_sdk/schemas/: base.py  departments.py  message.py  token.py  users.py
wecom_sdk/utils/: requests.py
